# edolview-rs

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Install.md  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
assets/: image_shader.frag
assets/colormap/mono/: gray.glsl  inferno.glsl  magma.glsl  plasma.glsl  twilight.glsl  viridis.glsl
assets/colormap/mono/unused/: hot.glsl  pink.glsl  summer.glsl  turbo.glsl  winter.glsl
assets/colormap/mono/unused/IDL/: IDL_16_Level.glsl  IDL_Blue_Pastel_Red.glsl  IDL_Blue_Red.glsl  IDL_Blue_Red_2.glsl  IDL_Blue_Waves.glsl  IDL_Blue_White_Linear.glsl  IDL_CB_Accent.glsl  IDL_CB_Blues.glsl  IDL_CB_BrBG.glsl  IDL_CB_BuGn.glsl  IDL_CB_BuPu.glsl  IDL_CB_Dark2.glsl  IDL_CB_GnBu.glsl  IDL_CB_Greens.glsl  IDL_CB_Greys.glsl  IDL_CB_OrRd.glsl  IDL_CB_Oranges.glsl  IDL_CB_PRGn.glsl  IDL_CB_Paired.glsl  IDL_CB_Pastel1.glsl  IDL_CB_Pastel2.glsl  IDL_CB_PiYG.glsl  IDL_CB_PuBu.glsl  IDL_CB_PuBuGn.glsl  IDL_CB_PuOr.glsl  IDL_CB_PuRd.glsl  IDL_CB_Purples.glsl  IDL_CB_RdBu.glsl  IDL_CB_RdGy.glsl  IDL_CB_RdPu.glsl  IDL_CB_RdYiBu.glsl  IDL_CB_RdYiGn.glsl  IDL_CB_Reds.glsl  IDL_CB_Set1.glsl  IDL_CB_Set2.glsl  IDL_CB_Set3.glsl  IDL_CB_Spectral.glsl  IDL_CB_YIGn.glsl  IDL_CB_YIGnBu.glsl  IDL_CB_YIOrBr.glsl  (+25 more)
assets/colormap/mono/unused/diverge/: diverge3.glsl  diverge4.glsl
assets/colormap/mono/unused/misc/: bky.glsl  gkr.glsl  gnu_30_31_32.glsl  gnu_33_13_10.glsl  rkc.glsl
assets/colormap/rgb/: bgr.glsl  color.glsl  flow.glsl  lab.glsl  normal.glsl
colormap/mono/: diverge.glsl  inferno.glsl  invalid_viz.glsl  magma.glsl  plasma.glsl  random.glsl  viridis.glsl
colormap/mono/unused/: autumn.glsl  bone.glsl  cool.glsl  copper.glsl  hsv.glsl  jet.glsl  parula.glsl  seismic.glsl  spring.glsl  twilight_shifted.glsl
colormap/mono/unused/diverge/: diverge0.glsl  diverge1.glsl  diverge2.glsl
colormap/mono/unused/misc/: ckr.glsl  rkg.glsl  saturn.glsl  ykb.glsl
colormap/rgb/: normal_xzy.glsl  ycbcr.glsl
docs/: DISTRIBUTE.md
packaging/: edolview.desktop
packaging/linux/: AppRun  edolview-wrapper.sh
packaging/macos/: Info.plist.in
packaging/windows/: edolview.wxs
python/: edolview.py  pyproject.toml
src/: control.rs  image_viewer.rs  main.rs  settings.rs  shader.rs  supported_image.rs  update.rs
src/debug/: debug_state.rs  debug_window.rs  mod.rs
src/model/: app_state.rs  asset.rs  file_nav.rs  gpu_compute.rs  image.rs  image_io.rs  image_processor.rs  mod.rs  recti.rs  socket.rs  statistics_worker.rs
src/res/: colors.rs  icons.rs  keyboard_shortcuts.rs  mod.rs
src/ui/: app.rs  fonts.rs  gpu.rs  gpu_image.frag  icon.rs  image_viewer.rs  mod.rs
src/ui/component/: bookmark_window.rs  channel_toggle.rs  csv_export.rs  custom_slider.rs  display_controls.rs  egui_ext.rs  export_action.rs  histogram_plot.rs  mod.rs  multi_line_plot.rs  toast.rs
src/ui/gl/: background_shader.rs  gl_ext.rs  image_shader.frag  mod.rs  shader.rs  shader_builder.rs
src/util/: bool_ext.rs  color.rs  concurrency.rs  csv.rs  cv_ext.rs  expression.rs  func_ext.rs  math_ext.rs  mod.rs  path_ext.rs  series.rs  str_ext.rs  timer.rs  ui_color.rs
xtask/: Cargo.toml
xtask/src/: main.rs
