[package]
name = "edolview"
version = "0.1.1"
edition = "2021"
authors = ["Daniel Jeon <edoli.mia@gmail.com>"]
description = "Image viewer for visualization and analysis"
license = "MIT"

[dependencies]
# Adjust version if build complains; this is a recent version as of 2025, change if needed.
opencv = { version = "0.95.1", features = ["imgcodecs", "imgproc"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
# Use only the glow backend so we can run custom OpenGL shaders via egui callbacks.
eframe = { version = "0.32", default-features = true, features = ["glow"] }
egui_glow = "0.32"
bytemuck = { version = "1.15", features = ["derive"] }
lru = "=0.16.1"
rfd = "0.15"
half = "2.6.0"
resvg = "0.45.1"
arboard = "3.6.1"
notify = "8.2.0"
ureq = "3.1.2"
indexmap = "2.11.4"
opener = "0.8.3"
flate2 = { version = "1.1.2", features = ["zlib-rs"], default-features = false }
clipboard-rs = "0.3.0"
dunce = "1.0.5"
libheif-sys = { version = "4.1", features = ["v1_19"] }
ffi = "0.1.1"

# Only for debug
egui_extras = "0.32"

[workspace]
members = ["xtask"]

[build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Edolview"
identifier = "kr.edoli.edolview"
icon = ["icons/Edolview.icns"]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
dependencies = ["libheif"]
# Per-target vcpkg triplet selection
# Adjust triplet names if you use custom/community triplets.

[target.x86_64-pc-windows-msvc]
env = { VCPKG_TARGET_TRIPLET = "x64-windows-static-md" }

[target.x86_64-unknown-linux-gnu]
# "x64-linux" is common; you may prefer "x86_64-linux" or leave unset for default.
env = { VCPKG_TARGET_TRIPLET = "x64-linux" }

[target.aarch64-unknown-linux-gnu]
# Example for ARM64 Linux (adjust if needed)
env = { VCPKG_TARGET_TRIPLET = "arm64-linux" }

[target.x86_64-apple-darwin]
# macOS Intel
env = { VCPKG_TARGET_TRIPLET = "x64-osx" }

[target.aarch64-apple-darwin]
# macOS Apple Silicon
env = { VCPKG_TARGET_TRIPLET = "arm64-osx" }
