[package]
name = "edolview"
version = "1.0.0"
edition = "2021"
authors = ["Daniel Jeon <edoli.mia@gmail.com>"]
description = "Image viewer for visualization and analysis"
license = "MIT"

[dependencies]
# Enable image-rs' complete default decoder set. Native AVIF decoding is kept
# behind the `avif` feature because it requires the system dav1d library. 
# EXR, TIFF, and JPEG 2000 use dedicated paths to preserve layout and precision.
image = "0.25.10"
exr = { version = "1.74.2", default-features = false, features = ["rayon"] }
hayro-jpeg2000 = "0.4.0"
tiff = { version = "0.11.3", features = ["webp", "zstd"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
# Use wgpu for both egui and the image pipeline so rendering and compute share one GPU API.
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu"] }
egui-wgpu = "0.35.0"
wgpu = { version = "29.0.0", features = ["naga-ir"] }
naga = { version = "29.0.0", features = ["glsl-in"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
lru = "0.18.0"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
half = "2.7.1"
resvg = { version = "0.47.0", default-features = false }
arboard = "3.6.1"
notify = "8.2.0"
ureq = "3.3.0"
indexmap = "2.14.0"
opener = "0.8.5"
flate2 = { version = "1.1.9", features = ["zlib-rs"], default-features = false }
clipboard-rs = "0.3.5"
dunce = "1.0.5"
libheif-sys = { version = "5.3.0", features = ["v1_23"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Only for debug
egui_extras = "0.35.0"

[features]
default = []
heif = ["libheif-sys"]
avif = ["image/avif-native"]

[workspace]
members = ["xtask"]

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
pollster = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_Shell"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35.0", default-features = false, features = ["x11"] }

[package.metadata.bundle]
name = "Edolview"
identifier = "kr.edoli.edolview"
icon = ["icons/Edolview.icns"]

[package.metadata.deb]
name = "edolview"
maintainer = "Daniel Jeon <edoli.mia@gmail.com>"
copyright = "2026, Daniel Jeon"
license-file = ["LICENSE", "4"]
section = "graphics"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/edolview", "opt/edolview/edolview", "755"],
    ["colormap/mono/*.glsl", "opt/edolview/colormap/mono/", "644"],
    ["colormap/rgb/*.glsl", "opt/edolview/colormap/rgb/", "644"],
    ["packaging/linux/edolview-wrapper.sh", "usr/bin/edolview", "755"],
    ["packaging/edolview.desktop", "usr/share/applications/edolview.desktop", "644"],
    ["icons/hicolor/16x16/apps/edolview.png", "usr/share/icons/hicolor/16x16/apps/edolview.png", "644"],
    ["icons/hicolor/24x24/apps/edolview.png", "usr/share/icons/hicolor/24x24/apps/edolview.png", "644"],
    ["icons/hicolor/32x32/apps/edolview.png", "usr/share/icons/hicolor/32x32/apps/edolview.png", "644"],
    ["icons/hicolor/48x48/apps/edolview.png", "usr/share/icons/hicolor/48x48/apps/edolview.png", "644"],
    ["icons/hicolor/64x64/apps/edolview.png", "usr/share/icons/hicolor/64x64/apps/edolview.png", "644"],
    ["icons/hicolor/128x128/apps/edolview.png", "usr/share/icons/hicolor/128x128/apps/edolview.png", "644"],
    ["icons/hicolor/256x256/apps/edolview.png", "usr/share/icons/hicolor/256x256/apps/edolview.png", "644"],
    ["icons/hicolor/512x512/apps/edolview.png", "usr/share/icons/hicolor/512x512/apps/edolview.png", "644"],
]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
dependencies = ["libheif"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
x86_64-unknown-linux-gnu = { triplet = "x64-linux-release" }
aarch64-unknown-linux-gnu = { triplet = "arm64-linux-release" }
aarch64-apple-darwin = { triplet = "arm64-osx-release" }
x86_64-apple-darwin = { triplet = "x64-osx-release" }
