[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[features]
default = []
avif = []
heif = []

[dependencies]
anyhow = "1.0.103"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.5.0"
which = "8.0.4"
dirs = "6.0.0"
walkdir = "2.5.0"
resvg = "0.47.0"
oxipng = "10.1.1"
